# StanowiskoChemiczne

./: .gitignore  README.md  StanowiskoChemiczne.pro  StanowiskoChemiczne.pro.user.local  StanowiskoChemiczne_pl_PL.ts  createtestwizard.cpp  createtestwizard.h  czas.txt  czujnikanalogowyustawieniaokno.cpp  czujnikanalogowyustawieniaokno.h  czujnikanalogowyustawieniaokno.ui  czujnikanalogowyustawieniawidget.ui  czujnikanalogowywidget.h  czujnikanalogowywidget.ui  czujnikianalogoweokno.cpp  czujnikianalogoweokno.h  czujnikianalogoweokno.ui  digitaloutwidget.h  disablebutton.h  formularzdialogbuttonbox.cpp  formularzdialogbuttonbox.h  glowneokno.cpp  glowneokno.h  glowneokno.ui  highlowdigitalwidget.cpp  highlowdigitalwidget.h  highlowdigitalwidget.ui  ikony.qrc  main.cpp  mainwindow.ui  nowyprojectdlg.cpp  nowyprojectdlg.h  nowytest_1.cpp  nowytest_1.h  nowytest_1.ui  nowytest_2.cpp  nowytest_2.h  nowytest_2.ui  nowytest_3.cpp  nowytest_3.h  (+58 more)
NI/DAQmx_ANSI_C_Dev/include/: nisyscfg.h  nisyscfg_errors.h  nisyscfg_wide.h
NI/DAQmx_ANSI_C_Dev/lib32/borland/: nisyscfg.lib
NI/DAQmx_ANSI_C_Dev/lib64/msvc/: NIDAQmx.lib
app/: .editorconfig  .qmake.stash  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CppProperties.json  Makefile  StanowiskoChemiczne.pro  StanowiskoChemiczne.pro.qtds  StanowiskoChemiczne.sln  StanowiskoChemiczne.vcxproj  StanowiskoChemiczne.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  app.kdev4  build_defs.h  cmake_install.cmake  common.h  crc8.h  createtestwizard.cpp  createtestwizard.h  czujnikanalogowyustawieniaokno.cpp  czujnikanalogowyustawieniaokno.h  czujnikanalogowyustawieniawidget.cpp  czujnikanalogowyustawieniawidget.h  czujnikanalogowyustawieniawidget.ui  czujnikanalogowywidget.cpp  czujnikanalogowywidget.h  czujnikanalogowywidget.ui  czujnikianalogoweokno.cpp  czujnikianalogoweokno.h  czujnikianalogoweustawieniaframe.cpp  czujnikianalogoweustawieniaframe.h  czw__wrz_15_20_56_54_2022.txt  czw__wrz_15_21_14_18_2022.txt  czw__wrz_15_21_19_14_2022.txt  czw__wrz_15_21_26_31_2022.txt  (+191 more)
app/.kdev4/: app.kdev4
app/enc_temp_folder/f11799bc4425f58d4121f3897021d9bf/: doublelineedit.h
app/form/: glowneokno.ui  nowytest_4.ui  nowytest_6.ui  nowytestdlg.ui  testtabswidget.ui
app/include/: czujnikanalogowyustawieniawidget.h  dispushbutton.h  glowneokno.h  nowyprojectdlg.h  serialmessage.h  testtabswidget.h  urzadzenia.h
app/src/: crc8.cpp  czujnikanalogowyustawieniawidget.cpp  dispushbutton.cpp  main.cpp  nowytest_4.cpp  projektwidget.cpp  serialmessage.cpp  urzadzenia.cpp  videowidget.cpp
app/ui/: ui_pictureframe.h  ui_wersjadlg.h
app/video/: VideoFrame.pro  mainwindow.cpp  mainwindow.ui
install/: README
install/config/: config.xml
kontroler.posrednik/include/: protocol.hpp
kontroler.posrednik/src/: main.cpp  protocol.cpp
kontroler.sterownik/: platformio.ini
kontroler.sterownik/include/: protocol.hpp  silnik.hpp
kontroler.sterownik/lib/: CRC-0.1.2
kontroler.sterownik/src/: main.cpp  main2.bck  protocol.cpp  silnik.cpp
pdf/CreatePdf/: CreatePdf.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  testdata.cpp  testdata.h
pdf/build-CreatePdf-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Makefile
pdf/build-CreatePdf-Desktop_Qt_5_15_2_MSVC2019_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
pdf/build-CreatePdf-Desktop_Qt_5_15_2_MSVC2019_32bit-Debug/debug/: CreatePdf.ilk  moc_mainwindow.cpp
setupapilib/64/: AdvAPI32.Lib
